Fixed process widget alignment and sizes issues

--- a/css/personalizedContent/widgets.less
+++ b/css/personalizedContent/widgets.less
@@ -92,18 +92,26 @@
 		}
 	}
 
-	li#processOfMe{
-		div.widget-item{
+	li#processOfMe {
+		div.widget-item {
 			border-left : 2px solid @pc-blue-light;
-				div.duedate{
+				div.description {
+					vertical-align : middle;
+				}
+				div.duedate {
 					font-size : 10px;
 					color     : @pc-red;
+				}
+				i.greatericon {
+					font-size: 1.75em;
+					padding-left: 35px;
 				}
 		}
 		div.olderdate{
 			border-left : 2px solid @pc-red;
 		}
 	}
+
 .footerLink {
 	i{
 		margin-left : 20px;
